<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:ignore="ExtraText">
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_account_2"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_login"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_login"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_login"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/repassword"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_login"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/button_background_login"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:autoLink="none"
            android:clickable="true"
            android:focusable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="Back"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>